Completed till swagger ui
